@@ -13,7 +13,7 @@ public class Lottos {
     private final List<Lotto> lottos;
 
     public Lottos(final List<Lotto> lottos) {
-        this.lottos = lottos;
+        this.lottos = List.copyOf(lottos);
     }
 
     public Lottos(final List<Lotto> manual, final List<Lotto> auto) {
@@ -21,10 +21,21 @@ public class Lottos {
         this.lottos = manual;
     }
 
-    public static Lottos forManualInput(final List<String[]> manualInput) {
+    public static Lottos forRandomGenerate(final LottoPurchaseMoney lottoPurchaseMoney, final ManualBuyCount manualBuyCount) {
+        final List<Lotto> lottos = new ArrayList<>();
+
+        int autoGenerateCount = lottoPurchaseMoney.getPurchaseQuantity() - manualBuyCount.getCount();
+        for (int i = 0; i < autoGenerateCount; i++) {
+            lottos.add(Lotto.byRandomGenerate());
+        }
+
+        return new Lottos(lottos);
+    }
+
+    public static Lottos forManualInput(final List<List<String>> manualInput) {
         List<Lotto> lottos = manualInput.stream()
                 .map(Lotto::fromStringsInput)
-                .collect(Collectors.toList());
+                .toList();
 
         return new Lottos(lottos);
     }
